feat: xay dung customer order list detail
